<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nb.jlcodingchallengeandroid.ui.destination.adapters.viewholders.DestinationItemViewModel" />

        <import type="android.view.View" />

        <import type="com.nb.jlcodingchallengeandroid.utils.DestinationSelectionType" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/card_border_container"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:padding="4dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:concatenateTitle="@{@string/layout_item_destination_text_name}"
            app:concatenateValue="@{viewModel.itemsListResponseDTO.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:text="@string/layout_item_destination_text_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:padding="4dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{viewModel.type.equals(DestinationSelectionType.CALL.name) ? View.VISIBLE : View.GONE }"
            app:concatenateTitle="@{@string/layout_item_destination_text_number}"
            app:concatenateValue="@{viewModel.itemsListResponseDTO.number}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:ignore="MissingConstraints"
            tools:text="@string/layout_item_destination_text_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:padding="4dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{viewModel.type.equals(DestinationSelectionType.CALL.name) ? View.GONE : View.VISIBLE }"
            app:concatenateTitle="@{@string/layout_item_destination_text_price}"
            app:concatenateValue="@{viewModel.itemsListResponseDTO.price}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNumber"
            tools:ignore="MissingConstraints"
            tools:text="@string/layout_item_destination_text_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:padding="4dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{viewModel.type.equals(DestinationSelectionType.CALL.name) ? View.GONE : View.VISIBLE }"
            app:concatenateTitle="@{@string/layout_item_destination_text_quntity}"
            app:concatenateValue="@{viewModel.itemsListResponseDTO.quantity}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrice"
            tools:ignore="MissingConstraints"
            tools:text="@string/layout_item_destination_text_quntity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:padding="4dp"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:visibility="@{viewModel.type.equals(DestinationSelectionType.CALL.name) ? View.GONE : View.VISIBLE }"
            app:concatenateTitle="@{@string/layout_item_destination_text_type}"
            app:concatenateValue="@{viewModel.type}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvQuantity"
            tools:ignore="MissingConstraints"
            tools:text="@string/layout_item_destination_text_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
